<resources>
    <string name="app_name">Breweryees</string>
    <string name="top_title">As 10 mais bem avaliadas:</string>
    <string name="logo_brewery">logo da cervejaria</string>
    <string name="top_item_title">Cervejaria A</string>
    <string name="km">0,9km</string>
    <string name="rating">5.0</string>
    <string name="type">Tipo</string>
    <string name="welcome">Bem-vindo(a)!</string>
    <string name="pubs">Encontre as melhores cervejarias</string>
    <string name="none" />
    <string name="search">Buscar cervejaria por cidade</string>
    <string name="GPS">Utilizar meu local</string>
    <string name="IconBeer">Button Icon Beer</string>
    <string name="ButtonFavorite">FavoriteButtonBeer</string>
    <string name="no_results">Nenhum resultado encontrado para a busca</string>
    <string name="no_search">Nenhum termo digitado</string>
    <string name="try_again">Por favor, verifique sua pesquisa e tente novamente para obter resultados.</string>
    <string name="title_gallery">Galeria</string>
    <string name="add_photo">ADCIONAR FOTO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvar">Salvar</string>
    <string name="typeInput">nome@email.com</string>
    <string name="checked">Lembrar meu e-mail para futuras avaliações</string>
    <string name="Evaluate">Avalie a Cervejaria A</string>
    <string name="Avaliacao">Sua avaliação foi</string>
    <string name="Add">adicionada com sucesso!</string>
    <string name="drink">Um Brinde!</string>
    <string name="exit">Exit</string>
    <string name="errorAlert">Email Invalid</string>
    <string name="nome_email_com">nome@email.com</string>
    <string name="sort_user_rating">sort user rating</string>
    <string name="qtd_result">0 resultado</string>
    <string name="user_rating_list_title">Cervejarias que você avaliou</string>
    <string name="rating_item_logo">A</string>
    <string name="rating_item_title">Cervejaria A</string>
    <string name="rating_item_value">5,0</string>
    <string name="rating_email_title">Cervejarias que você avaliou</string>
    <string name="rating_emal_sub_title">Informe seu e-mail para consultar as cervejarias avaliadas.</string>
    <string name="ckb_lembrar_email">Lembrar meu e-mail para futuras consultas</string>
    <string name="btn_confirm">CONFIRMAR</string>
    <string name="ckb_rating_sort_nota">Nota (maior para menor)</string>
    <string name="ckb_rating_sort_nome">Nome (A a Z)</string>
    <string name="rating_sort_title">Ordenar Por</string>
    <string name="ratin_list_sortBy">Oredenar por: Nota</string>
</resources>