<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vector_back"
    tools:context=".ui.userRating.UserRatingFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/user_rating_list_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_qtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/qtd_result"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <ImageButton
        android:id="@+id/btnShort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="20dp"
        android:height="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_qtd"
        android:background="@drawable/ic_sort"
        android:contentDescription="@string/sort_user_rating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRatingList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShort"
        tools:listitem="@layout/user_rating_item" />

    <TextView
        android:id="@+id/txt_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/ratin_list_sortBy"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_qtd"
        app:layout_constraintTop_toBottomOf="@+id/txt_qtd" />

</androidx.constraintlayout.widget.ConstraintLayout>