<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.app.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <ImageButton
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_exit"
            app:layout_constraintBottom_toBottomOf="@+id/txt_sort_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_sort_title"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ckb_sort_nota"
            style="@style/Widget.Material3.CompoundButton.CheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_vertical"
            android:text="@string/ckb_rating_sort_nota"
            android:textSize="14sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ckb_sort_az"
            app:layout_constraintStart_toStartOf="@+id/ckb_sort_az"
            app:layout_constraintTop_toBottomOf="@+id/ckb_sort_az" />

        <CheckBox
            android:id="@+id/ckb_sort_az"
            style="@style/Widget.Material3.CompoundButton.CheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/ckb_rating_sort_nome"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:typeface="normal"
            app:guidelineUseRtl="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sort_title" />

        <TextView
            android:id="@+id/txt_sort_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/rating_sort_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>