<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/card_rectangle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/card_opinion"
        app:layout_constraintEnd_toEndOf="@+id/card_opinion"
        app:layout_constraintStart_toStartOf="@+id/card_opinion"
        app:layout_constraintTop_toTopOf="@+id/card_opinion"
        app:srcCompat="@drawable/rectangle_card_opinion" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_opinion"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_card_opinion"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <View
            android:id="@+id/opinion_ellipse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="272dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ellipse_opinion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_letra"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/rating_item_logo"
            android:textAlignment="center"
            android:textColor="#FFD60A"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/opinion_ellipse"
            app:layout_constraintEnd_toEndOf="@+id/opinion_ellipse"
            app:layout_constraintStart_toStartOf="@+id/opinion_ellipse"
            app:layout_constraintTop_toTopOf="@+id/opinion_ellipse"
            app:layout_constraintVertical_bias="0.29000002" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/rating_item_title"
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/opinion_ellipse"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/rating_item_value"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <com.ciandt.breweryees.utils.RatingBarSvg
            android:id="@+id/bar_rating"
            style="@style/Widget.App.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_rating"
            app:layout_constraintStart_toEndOf="@+id/txt_rating"
            app:layout_constraintTop_toTopOf="@+id/txt_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>